# iscc-crypto

./: .gitignore  404.html  ANSWERS.md  CHANGELOG.md  CONVENTIONS.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: test.yml
.well-known/: did.json
changelog/: index.html
conventions/: index.html
demo/: signing.html
docs/: changelog.md  data-access-proof.md  index.md  iscc-keys-format.md  iscc-sig-spec.md  iscc-signatures-spec.md  protocol-vc.md  protocol.md  timestamping.md  usage-guide.md  vc-summary.md
docs/alice/: did.json
docs/tutorials/: cli-usage.md  getting-started.md
iscc-sig-spec/: index.html
iscc_crypto/: __init__.py  cli.py  cred.py  data.py  data_file.tsr  did.py  iscc_id.py  keys.py  keys_ecdsa.py  main.py  microtime.py  resolve.py  signing.py  tid.py  timestamp.py  tsa.py  verifying.py
scripts/: example.py  examples.py  test_vectors.md
search/: search_index.json
tests/: bench_ecdsa.py  bench_signing.py  bench_tid.py  bench_timestamp.py  conftest.py  test_cli.py  test_docs.py  test_iscc_crypto.py  test_keys.py  test_main.py  test_microtime.py  test_readme.py  test_resolve.py  test_signing.py  test_signing_sign_json.py  test_signing_sign_vc.py  test_timestamp.py  test_verifying.py  test_verifying_verify_json.py  test_verifying_verify_vc.py  test_version.py
tutorials/cli-usage/: index.html
tutorials/getting-started/: index.html
usage-guide/: index.html
