[tool.poetry]
name = "iscc-crypto"
version = "0.1.0"
description = "ISCC - Crypto"
authors = ["Titusz <tp@py7.de>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
keyring = "*"
jcs = "*"
jwcrypto = "*"
loguru = "*"
blake3 = "^0.4.1"
httpx = "^0.27.2"

[tool.poetry.group.test.dependencies]
pytest = "*"
bandit = "*"

[tool.poetry.dev-dependencies]
poethepoet = "*"
ruff = "*"
black = "*"
mdformat = "*"
mdformat-tables = "*"

[tool.ruff]
line-length = 100

[tool.ruff.format]
line-ending = "lf"

[tool.black]
line-length = 100
preview = true
enable-unstable-feature = ["string_processing"]
target-version = ['py39']

[tool.poe.tasks]
format-code = { cmd = "poetry run ruff format", help = "Code style formating with ruff" }
format-markdown = { cmd = "mdformat --wrap 100 --end-of-line lf .", help = "Markdown formating with mdformat" }
convert-lf = { script = "tests.lf:convert_lf", help = "Convert line endings to LF"}
run-tests = { cmd = "poetry run pytest", help = "Run tests with pytest" }
test-security = { cmd = "poetry run bandit -r iscc_crypto -q", help = "Run security check with bandit" }
all = ["format-code", "format-markdown", "convert-lf", "run-tests", "test-security"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
